# style-swipe

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: plan.md  review.md  status.md
app/: __init__.py  db.py  embeddings.py  evaluate.py  ingest.py  main.py  models.py  recommend.py
docs/: CONVENTIONS.md
plans/: 001-project-scaffold.md  002-embeddings-and-scoring.md  003-streamlit-swipe-ui.md  004-swipe-informed-reranking.md  005-url-importer.md  006-google-shopping-discovery.md  NEXT.md  TEMPLATE.md
tests/: conftest.py  test_embeddings.py  test_evaluate.py  test_feed.py  test_health.py  test_ingest.py  test_items.py  test_recommend.py  test_ui_client.py
ui/: api_client.py  app.py
