[project]
name = "style-swipe"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "numpy",
    "pillow",
    "sqlmodel",
    "streamlit",
    "torch",
    "transformers",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
